<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/welcome_screen_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:gravity="center_horizontal"
      android:text="@string/app_name"
      android:textColor="@android:color/white"
      android:textSize="28sp"
      android:textStyle="bold" />

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/amaranth"
          android:gravity="center"
          android:text="@string/welcome"
          android:textColor="#2B2929"
          android:textSize="20sp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/amaranth"
          android:gravity="center"
          android:text="@string/name_input"
          android:textSize="22sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:hint="@string/name"
            android:layout_marginTop="20dp"
            android:textColor="#363A43" />

      <Button
          android:id="@+id/btn_start"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:background="#E68E61DF"
          android:fontFamily="@font/amaranth"
          android:text="@string/start"
          android:textColor="@android:color/white" />

    </LinearLayout>
  </androidx.cardview.widget.CardView>


</LinearLayout>